--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "author": "Nur Muhammad",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.24.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.9.2",
     "http": "0.0.1-security",
     "mime-types": "^2.1.32",
-    "qrcode": "^1.4.4",
-    "socket.io": "2.3.0",
+    "qrcode": "^1.3.3",
+    "socket.io": "^2.4.1",
     "whatsapp-web.js": "latest"
   },
   "devDependencies": {
